# models/users.go
@@ -6,7 +6,7 @@ import (
 
 // User
 type User struct {
-	ID            int64          `json:"id"`
+	ID            string         `json:"id"`
 	Email         string         `json:"email"`
 	Password      string         `json:"password"`
 	Consultations []Consultation `json:"consultations"`
@@ -14,6 +14,12 @@ type User struct {
 
 // RequestUserDto
 type RequestUserDto struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type UsersResponse struct {
+	ID       string `json:"id"`
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
